--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "graphql": "^15.5.1",
     "merge-graphql-schemas": "^1.7.8",
     "mongoose": "^5.13.5",
-    "pdf-creator-node": "^2.2.3"
+    "pdf-creator-node": "^2.2.3",
+    "yarn": "^1.22.11"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
